Made it responsive through media queries

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
           <input type="text" id="inputField" onkeypress="myFunction(event)" />
           <button id="addToDo">Add</button>
         </div>
+
+        <div class="description">
+          <ul>
+            <li class="one-click">One Click to mark it</li>
+            <li class="two-click">Two Click to delete it from the list</li>
+          </ul>
+        </div>
         <div class="list" id="list-container"></div>
       </div>
     </div>
