--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="description">
           <ul>
             <li class="one-click">One Click to mark it</li>
-            <li class="two-click">Two Click to delete it from the list</li>
+            <li class="two-click">Two Clicks to delete it from the list</li>
           </ul>
         </div>
         <div class="list" id="list-container"></div>
